Fixed sidebar text wrapping

--- a/mysite/quiz/static/styles/style.css
+++ b/mysite/quiz/static/styles/style.css
@@ -304,9 +304,9 @@ body {
     text-decoration: none;
     font-size: 24px;
     font-family: "Arial";
-    padding: 12px;
     display: block;
     transition: 0.3s;
+    white-space: nowrap;
 }
 
 .sidebar-option:hover {
